--- a/index1.html
+++ b/index1.html
@@ -24,7 +24,7 @@
     </div>
     <nav class="navbar navbar-expand-sm justify-content-end mt-0 my-5">
         <ul class="navbar-nav">
-            <li class="text-white nav-item"><a href="#" class="nav-link text-white">Portfolio</a></l</li>
+            <li class="text-white nav-item"><a href="#" class="nav-link text-white">Portfolio</a></li>
             <li class="text-white nav-item " ><a href="#" class="nav-link text-white">Contact</a></li>
             <li class="text-white nav-item"><a href="#" class="nav-link text-white">About</a></li>
         </ul>
@@ -113,7 +113,7 @@
         </div>
     </div>
 </div>
-<form action="" class="mt-5" >
+<form class="mt-5" >
        <h3 class="text-center">Let's chat!</h3>
     <div class="d-flex flex-column border-dark border-2 justify-content-center mt-5 mb-5 ">
         <div class="">
@@ -126,7 +126,7 @@
         </div>
        <div class="">
            <label for="textarea"></label>
-           <textarea type="tex" name="textarea" id="textarea" class="form-control w-50" cols="30" rows="10"></textarea>
+           <textarea  name="textarea" id="textarea" class="form-control w-50" cols="30" rows="10"></textarea>
        </div>
     </div>
         <button type="button" class="btn btn-primary w-20 justify-content-center">See project</button>
