Aligning text , justifying content and building forms

--- a/index1.html
+++ b/index1.html
@@ -76,62 +76,96 @@
         </div>
     </div>
     <h2 class="sub-title">My recent work</h2>
-    <div class="d-flex">
-        <div class="col-sm-6">
-            <img src="assets/images/placeholder.png" alt="">
+    <div class="d-flex mt-5">
+        <div class="col-sm-6 text-end mx-4">
+            <img src="assets/images/placeholder.png" class="w-100" alt="">
         </div>
         <div class="col-sm-6">
-            <h3>Multi-Post Stories</h3>
-            <p class="text-white">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+            <h3 class="text-start">Multi-Post Stories</h3>
+            <p class="text-white text-start mt-5 w-75">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+            <div class="text-center text-start d-flex justify-content-start">
+                <button type="button" class="btn btn-primary w-auto justify-content-center p-4">See project</button>
+            </div>
         </div>
     </div>
-    <div class="d-flex flex-row-reverse">
-        <div class="col-sm-6">
-            <img src="assets/images/placeholder.png" alt="">
+    <div class="d-flex flex-row-reverse row mt-5">
+        <div class="col-sm-6 text-start">
+            <img src="assets/images/placeholder.png" class="w-100" alt="">
         </div>
-        <div class="d-flex">
-            <h3>Multi-Post Stories</h3>
-            <p class="text-white">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+        <div class="col-sm-6 d-flex justify-content-end">
+            <div>
+                <div class="d-flex justify-content-start">
+                    <h3 class="text-start">Multi-Post Stories</h3>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-start">
+                        <p class="text-white text-start  mt-5 text-start">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+                    </div>
+                </div>
+                <div class="text-center text-start d-flex justify-content-start">
+                    <button type="button" class="btn btn-primary w-auto justify-content-center p-4">See project</button>
+                </div>
+            </div>
+        </div>
+        div>
+    </div>
+    <div class="d-flex mt-5 gap-5">
+        <div class="col-sm-6 text-end mx-4">
+            <img src="assets/images/placeholder.png" class="w-100" alt="">
+        </div>
+        <div class="col-sm-6">
+            <h3 class="text-start">Multi-Post Stories</h3>
+            <p class="text-white text-start  mt-5  w-75 ">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+            <div class="text-center text-start d-flex justify-content-start">
+                <button type="button" class="btn btn-primary w-auto justify-content-center p-4">See project</button>
+            </div>
         </div>
     </div>
-    <div class="d-flex">
-        <div class="">
-            <img src="assets/images/placeholder.png" alt="">
+    <div class="d-flex flex-row-reverse row mt-5">
+        <div class="col-sm-6 text-start">
+            <img src="assets/images/placeholder.png" class="w-100" alt="">
         </div>
-        <div>
-            <h3>Multi-Post Stories</h3>
-            <p class="text-white">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+        <div class="col-sm-6 d-flex justify-content-end">
+            <div>
+                <div class="d-flex justify-content-start">
+                    <h3 class="text-start">Multi-Post Stories</h3>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-start">
+                        <p class="text-white text-start  mt-5 text-start">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+                    </div>
+                </div>
+                <div class="text-center text-start d-flex justify-content-start">
+                    <button type="button" class="btn btn-primary w-auto justify-content-center p-4">See project</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="d-flex flex-row-reverse row">
-        <div class="col-sm-6">
-            <img src="assets/images/placeholder.png" alt="">
-        </div>
-        <div class="col-sm-6">
-            <h3>Multi-Post Stories</h3>
-            <p class="text-white">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-        </div>
-    </div>
+        div>
 </div>
-<form class="mt-5" >
-       <h3 class="text-center">Let's chat!</h3>
-    <div class="d-flex flex-column border-dark border-2 justify-content-center mt-5 mb-5 ">
-        <div class="">
-            <label for="name"></label>
-            <input type="text" id="name" class="form-control w-50">
+<form class="mt-5 d-flex justify-content-center" >
+    <div class="w-50">
+        <h3 class="text-center">Let's chat!</h3>
+        <div class="d-flex flex-column border-dark border-2 justify-content-center mt-5 mb-5 ">
+            <p class="text-white w-auto">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
+            <div class="">
+                <label for="name"></label>
+                <input type="text" id="name" class="form-control w-100 p-4">
+            </div>
+            <div class="mt-0 pt-0">
+                <label for="email"></label>
+                <input type="text" id="email" class="form-control w-100 p-4 mh-100">
+            </div>
+            <div class="">
+                <label for="textarea"></label>
+                <textarea  name="textarea" id="textarea" class="form-control w-100" cols="30" rows="10"></textarea>
+            </div>
         </div>
-        <div class="mt-0 pt-0">
-            <label for="email"></label>
-            <input type="text" id="email" class="form-control w-50">
+        <div class="text-center">
+            <button type="button" class="btn btn-primary w-auto justify-content-center p-4">See project</button>
         </div>
-       <div class="">
-           <label for="textarea"></label>
-           <textarea  name="textarea" id="textarea" class="form-control w-50" cols="30" rows="10"></textarea>
-       </div>
     </div>
-        <button type="button" class="btn btn-primary w-20 justify-content-center">See project</button>
 </form>
- <div class="row d-flex flex-row">
+ <div class="d-flex justify-content-center mb-4">
      <div class="">
          <div class="">
              <ul class="nav justify-content-center">
@@ -142,7 +176,8 @@
              </ul>
          </div>
      </div>
-         <a href="#" class="text-center text-white text-decoration-none">kinyeramo@gmail.com</a>
+     <a href="#" class="text-center text-white text-decoration-none mt-2">kinyeramo@gmail.com</a>
  </div>
+</div>
 </body>
 </html>
